--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie-edge">
+  <link rel="stylesheet" href="./style.css">
   <title>Meditation BTSedition</title>
 </head>
 <body>
-  
+    <div class="app">
+      <div class="time-select">
+        <button>2 Minutes</button>
+        <button>5 Minutes</button>
+        <button>10 Minutes</button>
+      </div>
+      <div class="player-container"></div>
+      <div class="sound-picker"></div>
+    </div>
+    <script src = "./app.js"></script>
 </body>
 </html>
